<resources>
    <string name="app_name">tuinercia</string>
    <string name="facebook_app_id">1503400229776009</string>
    <string name="fb_login_protocol_scheme">fb1503400229776009</string>

    <!--Buttons-->
    <string name="btn_login">Ejercitame</string>
    <string name="btn_sign_up">Unete ya</string>
    <string name="btn_login_check">Aceptar</string>
    <string name="btn_check_in">CHECK IN</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="btn_agendar">AGENDAR</string>
    <string name="btn_mejorar_plan">Mejorar mi plan</string>
    <string name="btn_cancelar_plan"><u>Cancelar plan</u></string>
    <string name="btn_log_out">Cerrar Sesión</string>
    <string name="btn_next">Siguiente</string>
    <string name="btn_crear">Crear</string>

    <!--Labels-->
    <string name="toast_geoocalizacion">Dale click al pin para +info</string>
    <string name="textview_email">E-MAIL</string>
    <string name="textview_contraseña">CONTRASEÑA</string>
    <string name="textview_confirmar_email">CONFIRMAR E-MAIL</string>
    <string name="textview_confirmar_contraseña">CONFIRMAR CONTRASEÑA</string>
    <string name="textview_nombre">Nombre</string>
    <string name="textview_apellido">Apellidos</string>
    <string name="textiview_sexo">Soy: </string>
    <string name="radio_mujer">Mujer</string>
    <string name="radio_hombre">Hombre</string>
    <string name="title_main">Mi Adrenalina</string>
    <string name="title_all">Todo</string>
    <string name="label_sin_plan">Accesa a todas las clases que quieras, cuando quieras, donde quieras. Comienza adquieriendo tu membresía inercia.</string>
    <string name="label_plan_actual">Tu plan actual es: </string>
    <string name="label_plan_costo">Con un costo de $ </string>
    <string name="label_plan_incluye">Incluye </string>
    <string name="label_plan_clases"> clases</string>
    <string name="label_plan_caducidad_">Próxima Renovación: </string>
    <string name="label_prompt_planes">Elije tu plan</string>
    <string name="label_error_email_no_coincide">Los campos de correo no coinciden</string>
    <string name="label_error_password_no_coincide">Los campos de contraseña no coinciden</string>
    <string name="label_error_correo_formato_valido">El correo otorgado debe de tener un formato valido.</string>
    <string name="label_terminos_condiciones">Acepto  <u>Términos y Condiciones</u></string>
    <string name="label_error_terminos_condiciones">Debes aceptar los Términos y Condiciones para crear tu cuenta Inercia.</string>
    <string name="label_campo_obligatorio">Campo obligatorio</string>


    <!--Menu-->
    <string name="nav_logOut">Salir</string>
    <string name="nav_configuracion">Configuracion</string>
    <string name="nav_other">Otros</string>
    <string name="nav_reservacion">Reservar</string>
    <string name="nav_mi_cuenta">Mi Cuenta</string>
    <string name="nav_mis_clases">Mis Clases</string>


    <!--Seccion de Estudio agenda-->
    <string name="our_excer">NUESTRO EJERCICIO</string>
    <string name="label_agenda_clase">AGENDA TU CLASE: </string>
    <string name="label_orientacion_agenda">ORIÉNTAME</string>
    <string name="label_direccion">DIRECCION: </string>

    <string-array name="array_letra_semana">
        <item>DOM</item>
        <item>LUN</item>
        <item>MAR</item>
        <item>MIE</item>
        <item>JUE</item>
        <item>VIE</item>
        <item>SAB</item>
    </string-array>
    <string-array name="array_titles">
        <item>Mi Adrenalina</item>
        <item>Estudios Cerca</item>
        <item>Mis Clases</item>
        <item>Mi Cuenta</item>
    </string-array>
    <string-array name="array_day">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="array_month">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <!--Tab Titles-->
    <string name="tab_title_agendas">Agendas</string>
    <string name="tab_title_pasadas">Pasadas</string>

    <!--Dialogs-->
    <string name="dialog_title_error_conection">Oh oh</string>
    <string name="dialog_mensaje_error_conection">Revisa tu conexión de internet</string>
    <string name="dialog_button_error_conection">REINTENTAR</string>
    <string name="dialog_title_login_error">Oups</string>
    <string name="dialog_message_login_error">Revisa este bien tu correo y/o contraseña</string>
    <string name="dialog_title_error_server">¡No te rindas!</string>
    <string name="dialog_message_error_server">Estamos mejorando para ejercitarte mejor. Intenta mas tarde</string>
    <string name="dialog_meesage_crear_cuenta">¡Listo para tonificar! Comencemos</string>
    <string name="dialog_title_confirmar_reservacion">¿Deseas reservar esta clase? </string>
    <string name="dialog_message_confirmar_reservacion">Recuerda puedes cancelar hasta 5 hrs antes de tu clase</string>
    <string name="dialog_confirmar_reservacion_button_positive">Si</string>
    <string name="dialog_confirmar_reservacion_button_negative">No</string>
    <string name="dialog_confirmar_cancelacion_title">Uy!</string>
    <string name="dialog_confirmar_cancelacion_message">Estás seguro que quieres cancelar tu clase</string>
    <string name="custom_dialog_cvv_exp_message">Un código de tres dígitos ubicado al reverso de tu tarjeta de crédito.</string>
    <string name="custom_dialog_cvv_exp_title">CVV</string>
    <string name="custom_dialog_vencimiento_exp_message">Encontrarás esta fecha en el frente de tu tarjeta, debajo del número de tarjeta.</string>
    <string name="custom_dialog_vencimiento_exp_title">Fecha de Vto.</string>
    <string name="dialog_title_create_payment">Danos unos minutos... estamos procesando el pago con tu banco</string>
    <string name="dialog_message_create_payment">¡Pronto podrás descubrir nuevas clases y agendar las que más te gusten!</string>
    <string name="dialog_end_message_create_payment">Sabrás que tu pago fue autorizado en esta sección de tu cuenta</string>
    <string name="dialog_title_sos">¿Dudas? \nEscribenos aquí.</string>
    <string name="dialog_title_sos_2">Escribenos aquí.</string>

</resources>
