<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="80dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="4">
                <EditText
                    android:id="@+id/text_email_crear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/WHITE"
                    android:hint="@string/textview_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:textColor="@color/WHITE"
                    android:textColorHint="@color/GRAY" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="4">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/WHITE"
                    android:backgroundTint="@color/WHITE"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:layout_weight="1"
                    android:inputType="textEmailAddress"
                    android:hint="@string/textview_confirmar_email"
                    android:textColorHint="@color/GRAY"
                    android:id="@+id/text_confirmar_email_crear"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="4">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/WHITE"
                    android:backgroundTint="@color/WHITE"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:hint="@string/textview_contraseña"
                    android:textColorHint="@color/GRAY"
                    android:id="@+id/text_contraseña_crear"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="4">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/WHITE"
                    android:backgroundTint="@color/WHITE"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:hint="@string/textview_confirmar_contraseña"
                    android:textColorHint="@color/GRAY"
                    android:id="@+id/text_contraseña_confirmar_crear"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:weightSum="3"
        android:gravity="right"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>
        <Button
            android:id="@+id/button_crear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_next"
            android:layout_weight="2"
            android:background="@drawable/rounded_button_state_reverse"
            android:textColor="@color/WHITE"/>
    </LinearLayout>
    <include
        android:id="@+id/loading_view"
        layout="@layout/view_loading"/>
</RelativeLayout>
