<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="80dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="4">
                <EditText
                    android:id="@+id/textview_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/WHITE"
                    android:hint="@string/textview_nombre"
                    android:inputType="textCapWords"
                    android:textColor="@color/WHITE"
                    android:textColorHint="@color/WHITE" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Fecha de Cumpleaños: "
                android:textColor="@color/WHITE"
                android:gravity="center_vertical"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <EditText
                    android:id="@+id/txt_year_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:maxLength="15"
                    android:hint="YYYY-MM-DD"
                    android:maxLines="1"
                    android:textColor="@color/WHITE"
                    android:textColorHint="@color/GRAY"
                    android:backgroundTint="@color/WHITE"
                    android:focusable="false"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Soy: "
                android:textColor="@color/WHITE"/>
            <RadioGroup
                android:id="@+id/rdo_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_mujer"
                    android:textColor="@color/WHITE"
                    android:layout_weight="2"
                    android:buttonTint="@color/button_unete"
                    android:checked="false"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_hombre"
                    android:textColor="@color/WHITE"
                    android:layout_weight="2"
                    android:buttonTint="@color/button_unete"
                    android:checked="false"/>
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:weightSum="5">
                <Switch
                    android:id="@+id/swt_terminos_condiciones"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:textColor="@color/WHITE"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:id="@+id/text_terminos_condiciones"
                    android:text="@string/label_terminos_condiciones"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:weightSum="3"
        android:gravity="right"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>
        <Button
            android:id="@+id/button_crear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_crear"
            android:layout_weight="2"
            android:background="@drawable/rounded_button_state_reverse"
            android:textColor="@color/WHITE"/>
    </LinearLayout>
    <include
        android:id="@+id/loading_view"
        layout="@layout/view_loading"/>
</RelativeLayout>
